# BIM_OCR

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/local/: Dockerfile
docker/runpod/: Dockerfile  entrypoint.sh
docs/: .gitignore  gateway-guide.md
src/gateway/: __init__.py  main.py  store.py  tasks.py
src/gateway/routes/: __init__.py  documents.py
src/gateway/services/: __init__.py  pdf_pipeline.py  runpod_client.py  storage.py
src/gateway/web/: app.js  index.html
src/shared/: __init__.py  config.py  schemas.py  storage.py
src/worker/: __init__.py  app.py  inference.py  serverless.py
