[project]
name = "bim-ocr"
version = "0.1.0"
description = "End-to-end OCR and analysis pipeline for architectural PDF drawings using Qwen2.5-VL."
authors = [
    { name = "BIM OCR Team" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pdf2image>=1.17.0",
    "pymupdf>=1.24.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.4",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "structlog>=24.1.0"
]

[project.optional-dependencies]
worker = [
    "vllm>=0.4.2",
    "einops>=0.8.0",
    "transformers>=4.40.0"
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
